Fix alignment table

--- a/css/default.css
+++ b/css/default.css
@@ -200,3 +200,18 @@ html, body {
 .display-none {
     display: none;
 }
+
+.table-div {
+    margin: 10px;
+    width: 100%;
+}
+
+.table-div .header-cell-div {
+    background-color: #f1f3f7;
+    padding: 10px;
+    border: 1px solid #d6dfe6;
+}
+
+.table-div .body-cell-div {
+    width: 100%;
+}
